--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/styles.css">
-    <title>My App</title>
-</head>
-<body>
-    <h1>Welcome to my App!!!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat perferendis tempore delectus rem. Iure aspernatur a itaque facere quam optio voluptas deleniti nihil obcaecati, eligendi culpa amet error, perferendis minus.</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block head %}
+<title>White Wolf 3D</title>
+{% endblock %}
+
+{% block body %}
+<div class="content">
+        <h1>White Wolf 3d</h1>
+        <h2>Task Manager</h2>
+        <table>
+            <tr>
+                <th>Task</th>
+                <th>Added</th>
+                <th>Actions</th>
+            </tr>
+            <tr>
+                <td>Contents</td>
+                <td>Date</td>
+                <td>More</td>
+            </tr>
+        </table>
+        <form action="">
+            <input type="text" name="content" id="content">
+            <input type="submit" value="Add Task" id="btn_add">
+        </form>
+    </div>
+{% endblock %}
