--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block head %}
-<title>White Wolf 3D</title>
+<title>Task Manager</title>
 {% endblock %}
 
 {% block body %}
 <div class="content">
-        <h1>White Wolf 3d</h1>
-        <h2>Task Manager</h2>
-        {% if task | length < 1%}
+        <h1>Task Manager</h1>
+        {% if tasks | length < 1%}
         <h3>There are no tasks... Create one here!</h3>
         {% else %}
         <table>
@@ -18,21 +17,21 @@
                 <th>Actions</th>
             </tr>
             {% for task in tasks %}
-            <tr>
-                <td>{{task.content}}</td>
-                <td>{{task.created.strftime("%Y-%m-%d")}}</td>
-                <td>
-                    <a href="/delete/{{task.id}}">Delete</a>
-                    <br>
-                    <a href="/update/{{task.id}}">Edit</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>{{task.content}}</td>
+                    <td>{{task.created.strftime("%Y-%m-%d")}}</td>
+                    <td>
+                        <a href="/delete/{{task.id}}">Delete</a>
+                        <br>
+                        <a href="/edit/{{task.id}}">Edit</a>
+                    </td>
+                </tr>
             {% endfor %}
         </table>
         {% endif %}
-        <form action="">
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Add Task" id="btn_add">
+        <form action="/" method="POST">
+            <input type="text" name="content" id="content" />
+            <input type="submit" value="Add Task" id="btn_add" />
         </form>
     </div>
 {% endblock %}
